--- a/style.css
+++ b/style.css
@@ -1,3 +1,24 @@
+@media (max-width: 960px) {
+  /* For a screen < 960px, this CSS will be read */
+  .container {
+    width: 700px;
+  }
+}
+
+@media (max-width: 720px) {
+  /* For a screen < 720px, this CSS will be read */
+  .container {
+    width: 500px;
+  }
+}
+
+@media (max-width: 540px) {
+  /* For a screen < 540px, this CSS will be read */
+  .container {
+    width: 300px;
+  }
+}
+
 body {
   display: flex;
   flex-direction: column;
@@ -13,6 +34,10 @@ body, html {
   margin: 0;
   padding: 0;
   height: 100%;
+}
+body {
+  display: flex;
+  flex-direction: column;
 }
 
 .content {
@@ -88,7 +113,7 @@ p {
 
 .profilepic-container:hover .profilepic-hover  {
   opacity: 1;
-}
+} */
 
 
  .container {
