--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ p {
 
 .profilepic-container:hover .profilepic-hover  {
   opacity: 1;
-} */
+} 
 
 
  .container {
@@ -122,7 +122,6 @@ p {
 }
 
 .intro_card {
-
     background: transparent;
     opacity: 0.9;
     padding: 20px;
@@ -217,8 +216,6 @@ ul {
  li i {
   font-size: 2em;
 }
-
-
 
   .glow {
     color: white;
