--- a/style.css
+++ b/style.css
@@ -70,6 +70,13 @@ h2 {
 
 h3 {
   font-size: 40px;
+  text-decoration: none;
+  color: white;
+}
+
+h3 li {
+  color: white;
+  text-decoration: none;
 }
 
 h2 {
@@ -182,7 +189,8 @@ p {
 
 .middle_card {
   background: rgba(31, 2, 84, 0.7);
-    color: #fff;
+  font-family: caveat;
+  color: white;
     padding: 10px;
     border: 10px solid #FF69B4;
     box-shadow: 0 0 50px 15px #5d0330;
@@ -197,6 +205,7 @@ p {
   }
   .middle_card li {
     margin-right: 90px; /* Adjust the margin value to add more space between items */
+    text-decoration: none;
   }
 
   /* To remove the right margin from the last item */
@@ -237,6 +246,7 @@ ul {
 
  li i {
   font-size: 2em;
+  text-decoration: none;
 }
 
   .glow {
@@ -257,7 +267,7 @@ ul {
 
   .fa-brands {
     /* Add any other styles you want for the icons */
-    color: #000; /* Default color (black) for the icons */
+    color: #5DEDE4; /* Default color (black) for the icons */
     font-size: 60px; /* Adjust the font size as needed */
     transition: color 0.3s; /* Transition for smooth color change */
   }
@@ -334,6 +344,12 @@ ul {
   text-align: center;
   width: 70%;
   font-family: rubik;
+}
+
+.project-page a {
+  color: #FF69B4;
+  font-size: 25px;
+  text-decoration: underline; /* Add underline for better visibility */
 }
 
 .project-background {
@@ -417,4 +433,9 @@ ul {
 /* Add hover effect */
 .modal-close-button:hover {
   background-color: #FF0080;
+}
+
+.button-link {
+  text-decoration: none;
+  color:#5DEDE4;
 }
