small change to glow

--- a/style.css
+++ b/style.css
@@ -34,9 +34,9 @@
     font-size: 24px;
   }
 
-  .glow {
+  /* .glow {
     font-size: 20px;
-  }
+  } */
 
   /* Adjust padding and margins for smaller screens */
   .intro_card {
