--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@
   h1, .glow {
     font-size: 30px;
   }
-
+/*  */
   h2 {
     font-size: 25px;
   }
@@ -282,12 +282,12 @@ p {
     justify-content: center;
     align-items: center;
     background-image: none;
-    background-color: #19244A;
-    opacity: 2;
-    border: 10px solid #FF69B4;
-    box-shadow: 0 0 50px 15px #5d0330;
+    /* background-color: #19244A; */
+    /* opacity: 2; */
+    /* border: 10px solid #FF69B4; */
+    /* box-shadow: 0 0 50px 15px #5d0330; */
     margin: 10px auto;
-    border-radius: 20px;
+    /* border-radius: 20px; */
     text-align: center;
     width: 30%;
     height: 100px;
